--- a/06-Code/Team6_TicSell/web/index.html
+++ b/06-Code/Team6_TicSell/web/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicSell</title>
     <link rel="preload" href="css/styles.css" as=""style>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
 <div style="text-align: center;">
-    <img class="Logo" src="TicSell portada.png" >
+    <img class="icon" src="logoTicSell.jpg" >
 </div>
 
     <nav class="navegacion_principal contenedor">
         <a href="index.html">Inicio</a>
-        <a href="catalogo.html">Catálogo</a>
+        <a href="store.html">Catálogo</a>
         <a href="blog.html">Blog</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="contactanos.html">Contáctanos</a>
+        <a href="about us.html">Nosotros</a>
+        <a href="contact us.html">Contáctanos</a>
     </nav>
 
-    <section>
+    <section class="hero">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
