--- a/06-Code/Team6_TicSell/web/blog.html
+++ b/06-Code/Team6_TicSell/web/blog.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo</title>
+    <title>Blog</title>
     <link rel="preload" href="css/styles.css" as=""style>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
 <div style="text-align: center;">
-    <img class="Logo" src="TicSell portada.png">
+    <img class="icon" src="logoTicSell.jpg" >
 </div>
 
     <nav class="navegacion_principal contenedor">
         <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="contactanos.html">Contáctanos</a>
-        <a>Iniciar sesión</a>
+        <a href="store.html">Catálogo</a>
+        <a href="about us.html">Nosotros</a>
+        <a href="contact us.html">Contáctanos</a>
     </nav>
 
     <header>
-        <h1>Catálogo</h1>
+        <h1>Blog</h1>
     </header>
 
 </body>
