--- a/06-Code/Team6TicSell/web/HTML/register.html
+++ b/06-Code/Team6TicSell/web/HTML/register.html
@@ -9,7 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TicSell</title>
-        <link href="../CSS/styles.css" rel="stylesheet" type="text/css"/>
+        <link href="../Css/styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div style="text-align: center;">
